Button Icon alignment fixed and these changes Nav Close Button changed to arrow instead of X Register Modal Close button style fixed

--- a/src/assets/sass/modules/_navbars.sass
+++ b/src/assets/sass/modules/_navbars.sass
@@ -42,6 +42,13 @@ nav
                 width: 100%
                 .hamburger-content-header
                     display: none
+                    .close-menu
+                        .icon
+                            @include size(32px)
+                            fill: $grey-03
+                        &:hover
+                            .icon
+                                fill: $grey-01
                 ul
                     @include flex-parent
                     list-style-type: none
