--- a/src/assets/sass/modules/_registermodal.sass
+++ b/src/assets/sass/modules/_registermodal.sass
@@ -61,6 +61,8 @@
                     cursor: pointer
                     position: relative
                     z-index: 999
+                    @media screen and ( max-width: 800px )
+                        margin-top: -40px
                     .icon
                         @include size(24px)
                         fill: $grey-04
@@ -105,10 +107,10 @@
                 fill: $grey-01
                 @media screen and ( max-width: 1200px )
                     fill: $grey-03
-                    &:hover
-                        fill: $grey-01
             &:hover .icon
                 fill: $white-01
+                @media screen and ( max-width: 1200px )
+                    fill: $grey-01
             @media screen and ( max-width: 800px )
                 top: calc(2% + 16px)
                 right: 5%
