--- a/src/assets/sass/partials/_buttons.sass
+++ b/src/assets/sass/partials/_buttons.sass
@@ -4,10 +4,11 @@
 
 .button-primary
   @extend .button-01
+  line-height: 22px
   color: $white-01
   display: inline-block
   background: #006bc2
-  padding: 16px 32px
+  padding: 14px 32px
   border-radius: 5px
   border: none
   outline: none
@@ -32,10 +33,11 @@
 
 .button-outline
   @extend .button-01
+  line-height: 22px
   display: inline-block
   background: transparent
   color: #52535C
-  padding: 16px 32px
+  padding: 14px 32px
   border-radius: 5px
   border: 2px solid #9597A5
   outline: none
@@ -60,10 +62,11 @@
 
 .icon-button-primary
   @extend .button-01
+  line-height: 22px
   display: inline-block
   background: #006BC2
   color: #fff
-  padding: 16px 24px
+  padding: 14px 24px
   border-radius: 5px
   border: none
   outline: none
@@ -92,10 +95,11 @@
 
 .icon-button-outline
   @extend .button-01
+  line-height: 22px
   display: inline-block
   background: transparent
   color: #52535C
-  padding: 16px 24px
+  padding: 14px 24px
   border-radius: 5px
   border: 2px solid #9597A5
   outline: none
@@ -167,33 +171,41 @@
   /* Primary Button */
 
   .button-primary
-    padding: 12px 24px
+    line-height: 20px
+    padding: 10px 24px
     font-size: 1rem
 
   /* Outline Buttons */
 
   .button-outline
-    padding: 12px 24px
+    line-height: 20px
+    padding: 10px 24px
     font-size: 1rem
     border-width: 1.6px
 
   /* Icon Button Primary */
 
   .icon-button-primary
-    padding: 12px 16px
+    line-height: 20px
+    padding: 10px 16px
     font-size: 1rem
 
     .icon
+      width: 20px
+      height: 20px
       margin-right: 8px
 
   /* Icon Button Outline */
 
   .icon-button-outline
-    padding: 12px 16px
+    line-height: 20px
+    padding: 10px 16px
     font-size: 1rem
     border-width: 1.6px
 
     .icon
+      width: 20px
+      height: 20px
       margin-right: 8px
 
 	
